--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,7 +1,41 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+
+<meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
+<meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
+
 <head th:replace="layout/header::userHead"></head>
+<script>
+    function messages(e) {
+
+        var csrfHeader = $('meta[name="_csrf_header"]').attr('content');
+        var csrfToken = $('meta[name="_csrf"]').attr('content');
+
+        $.ajax({
+            type: "post",
+            url: "/api/messages",
+            //dataType: "json",
+            beforeSend: function(xhr) {
+                xhr.setRequestHeader(csrfHeader, csrfToken);
+                xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest")
+                xhr.setRequestHeader("Content-type", "application/json")
+            },
+            success: function(data) {
+                console.log(data);
+                window.location = '/messages';
+            },
+            error: function(xhr, status, error) {
+                console.log(error);
+                if (xhr.responseJSON.status == '401') {
+                    window.location = '/api/login?error=true&exception=' + xhr.responseJSON.message;
+                } else if (xhr.responseJSON.status == '403') {
+                    window.location = '/api/denied?exception=' + xhr.responseJSON.message;
+                }
+            }
+        });
+    }
+</script>
 <body>
     <div th:replace="layout/top::header"></div>
     <div class="container">
@@ -13,7 +47,8 @@
                             <div style="text-align: left;" class="nav flex-column nav-pills" aria-orientation="vertical">
                                 <a th:href="@{/}" style="text-align: left;" class="nav-link active">대시보드</a>
                                 <a th:href="@{/mypage}" style="text-align: left;" class="nav-link text-primary">마이페이지</a>
-                                <a th:href="@{/messages}" style="text-align: left;" class="nav-link text-primary">메시지</a>
+                                <!--<a th:href="@{/messages}" style="text-align: left;" class="nav-link text-primary">메시지</a>-->
+                                <a href="#" onclick="messages()" style="margin: 5px;" class="nav-link text-primary">메시지</a>
                                 <a th:href="@{/config}" style="text-align: left;" class="nav-link text-primary">환경설정</a>
                             </div>
                         </li>
